fix: remove horizontal scroll

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -31,6 +31,7 @@ select {
 
 .app {
 	height: 100vh;
+	overflow-x: hidden;
 }
 
 main {
